@@ -1,3 +1,8 @@
+Feb 04, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
+- add --nomapscan option
+- add ET Gslist master
+- mark q3 servers with protocol different from master as incompatible
+
 Feb 03, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - update Danish translation (Morten Brix Pedersen)
 
